# compute-shader-procedural-generation

./: .gitignore  .gitmodules  CMakeLists.txt
app/: CMakeLists.txt  app.cpp  app.h  main.cpp
assets/configs/: terrain_gen.txt
assets/shaders/compute/: terrain_gen.hlsl  terrain_normals.hlsl  terrain_raymarch.hlsl
renderer/: CMakeLists.txt  allocator.cpp  allocator.h  buffer.cpp  buffer.h  command_buffer.cpp  command_buffer.h  command_pool.cpp  command_pool.h  descriptor_pool.cpp  descriptor_pool.h  descriptor_set.h  descriptor_set_layout.cpp  descriptor_set_layout.h  device.cpp  device.h  fence.cpp  fence.h  image.cpp  image.h  image_view.cpp  image_view.h  pipeline.cpp  pipeline.h  pipeline_layout.cpp  pipeline_layout.h  queue.cpp  queue.h  semaphore.cpp  semaphore.h  shader.cpp  shader.h  shader_compiler.cpp  shader_compiler.h  surface.cpp  surface.h  swapchain.cpp  swapchain.h
